# opacity

./: .gitignore  BUILD_SETUP.md  CMakeLists.txt  ENVIRONMENT_SETUP_SUMMARY.md  FINAL_SETUP_REPORT.md  README.md  build.ps1  opacity_imgui.ini  vcpkg.json
_plan/: PLAN.md  phase-5-specification.md  phased-development-plan.md
include/opacity/archive/: ArchiveManager.h
include/opacity/batch/: BatchRename.h  DuplicateFinder.h
include/opacity/core/: BookmarkManager.h  Config.h  CrashRecovery.h  Localization.h  Logger.h  Path.h  PluginManager.h  SessionManager.h  ShellIntegration.h  TagManager.h  UpdateManager.h
include/opacity/diff/: DiffEngine.h  FolderComparison.h
include/opacity/filesystem/: CloudIntegration.h  FileSystemManager.h  FileWatch.h  FsItem.h  NetworkStorage.h  OperationQueue.h
include/opacity/preview/: DocumentPreviewHandler.h  HexPreviewHandler.h  ImagePreviewHandler.h  MediaPreviewHandler.h  PreviewManager.h  TextPreviewHandler.h
include/opacity/search/: FilterEngine.h  SearchEngine.h  SearchIndex.h
include/opacity/ui/: AdvancedSearchDialog.h  CommandPalette.h  DiffViewer.h  FilePane.h  ImGuiBackend.h  ImGuiScoped.h  KeybindManager.h  LayoutManager.h  MainWindow.h  SystemTray.h  TabManager.h  Theme.h
src/: CMakeLists.txt  main.cpp
src/archive/: ArchiveManager.cpp  CMakeLists.txt
src/batch/: BatchRename.cpp  CMakeLists.txt  DuplicateFinder.cpp
src/core/: BookmarkManager.cpp  CMakeLists.txt  Config.cpp  CrashRecovery.cpp  Localization.cpp  Logger.cpp  Path.cpp  PluginManager.cpp  SessionManager.cpp  ShellIntegration.cpp  TagManager.cpp  UpdateManager.cpp
src/diff/: CMakeLists.txt  DiffEngine.cpp  FolderComparison.cpp
src/filesystem/: CMakeLists.txt  CloudIntegration.cpp  FileSystemManager.cpp  FileWatch.cpp  FsItem.cpp  NetworkStorage.cpp  OperationQueue.cpp
src/preview/: CMakeLists.txt  DocumentPreviewHandler.cpp  HexPreviewHandler.cpp  ImagePreviewHandler.cpp  MediaPreviewHandler.cpp  PreviewManager.cpp  TextPreviewHandler.cpp
src/search/: CMakeLists.txt  FilterEngine.cpp  SearchEngine.cpp  SearchIndex.cpp
src/ui/: AdvancedSearchDialog.cpp  CMakeLists.txt  CommandPalette.cpp  DiffViewer.cpp  FilePane.cpp  ImGuiBackend.cpp  KeybindManager.cpp  LayoutManager.cpp  MainWindow.cpp  SystemTray.cpp  TabManager.cpp  Theme.cpp
tests/: CMakeLists.txt  imgui_scoped_compile_test.cpp  imgui_stack_test.cpp
